# semantic_spacial_mapping

./: .gitignore  README.md
gazebo_demo/: README.md  factory_obstacle_demo.world
gazebo_demo/launch/: factory_bot_bridge.launch.py
gazebo_demo/scripts/: factory_bot_demo_driver.py  factory_bot_stack_navigator.py
geometry/pointclouds/: object_pointclouds.py  pointcloud_generation.py
geometry/transforms/: depth_to_rgb_projection.py
mapping/global_map/: semantic_object_map.py  world_map.py
motion/vo/: __init__.py  bow_database.py  bundle_adjustment.py  covisibility.py  local_mapping.py  loop_detector.py  map_culling.py  pipeline.py  place_recognition.py  vocabulary.py
notes/: runtime_validation_checklist.md
ros/semantic_spatial_mapping_ros/: package.xml  setup.cfg  setup.py
ros/semantic_spatial_mapping_ros/config/: embedded_oakd.yaml  gazebo.yaml
ros/semantic_spatial_mapping_ros/launch/: embedded_runtime.launch.py  gazebo_runtime.launch.py
ros/semantic_spatial_mapping_ros/resource/: semantic_spatial_mapping_ros
ros/semantic_spatial_mapping_ros/semantic_spatial_mapping_ros/: converters.py  image_sync.py  pose_sources.py  publishers.py  semantic_spatial_node.py
runtime/core/: __init__.py  config.py  diagnostics.py  perception.py  pose.py  pose_providers.py  runtime_logger.py  runtime_validation.py  segmentation.py  semantic_runtime.py  types.py
segmentation/: segmentation_reference.py
tests/: test_ros_converters.py  test_runtime_core.py  test_vo_rgbd.py
